--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "@voucherify/sdk": "2.0.2",
     "body-parser": "1.20.0",
     "dotenv": "16.0.0",
-    "express": "4.17.3"
+    "express": "4.17.3",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "eslint": "8.13.0",
