--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "body-parser": "1.20.0",
     "dotenv": "16.0.0",
     "express": "4.17.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "serve": "^13.0.2"
   },
   "devDependencies": {
     "eslint": "8.13.0",
