--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "start": "node server.js"
+    "start": "node server/server.js"
   }
 }
