--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "^13.0.2"
   },
   "devDependencies": {
-    "eslint": "8.13.0",
+    "eslint": "^8.13.0",
     "husky": "7.0.4",
     "lint-staged": "12.3.7"
   },
