--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "es6": true,
-        "node": true
+        "node": true,
+        "browser": true
     },
     "parserOptions": {
         "ecmaVersion": 2018
@@ -84,22 +85,17 @@
         "curly": "error",
         "dot-location": ["error", "property"],
         "no-empty-function": "error",
-        "no-magic-numbers": [ "error", { "ignore": [0,1,-1,100,1000], "enforceConst": true }],
+        "no-magic-numbers": [ "error", { "ignore": [0,1, 2, -1,100, 200, 400, 404, 1000, 5000], "enforceConst": true }],
         "no-multi-spaces": "error",
         "no-multi-str": "error",
         "no-return-assign": "error",
         "no-return-await": "error",
         "no-unmodified-loop-condition": "error",
         "no-trailing-spaces": "error",
-        "radix": "error",
         "require-await": "error",
         "wrap-iife": [
         "error",
         "inside"
-        ],
-        "strict": [
-        "error",
-        "global"
         ]
     },
     "extends": "eslint:recommended"
