--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "body-parser": "1.20.0",
     "dotenv": "16.0.0",
     "express": "4.17.3",
+    "express-async-handler": "^1.2.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "serve": "^13.0.2"
   },
