add stack heroku-22 to package.json

--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "prepare": "husky install",
     "start": "node server/server.js",
     "dev": "nodemon server/server.js"
-  }
+  },
+  "stack": "heroku-22"
 }
